# Network_Assistant

./: .gitignore  CMakeLists.txt  LICENSE  Qt笔记.md  Qt网络笔记.md  RCa23348  README.md  app.rc  global.cpp  global.h  icon.qrc  led_widget.cpp  led_widget.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  main_window.ui.autosave  multiple_send_widget.cpp  multiple_send_widget.h  multiple_send_widget.ui  network_settings_box.cpp  network_settings_box.h  network_settings_box.ui  network_settings_widget.cpp  network_settings_widget.h  network_settings_widget.ui  notification_bubble.cpp  notification_bubble.h  notification_manager.cpp  notification_manager.h  receive_area_box.cpp  receive_area_box.h  receive_settings_box.cpp  receive_settings_box.h  receive_settings_widget.cpp  receive_settings_widget.h  receive_settings_widget.ui  receive_widget.cpp  receive_widget.h  (+17 more)
.github/workflows/: build.yml
custom_widget/: auto_width_combobox.cpp  auto_width_combobox.h  debounced_spin_box.cpp  debounced_spin_box.h  editable_tabwidget.cpp  editable_tabwidget.h  led_widget.cpp  notification_bubble.h  notification_manager.cpp  scrollable_list_widget.cpp  scrollable_list_widget.h  toggle_button.cpp  toggle_button.h
receive_send_widget/: multiple_send_widget.cpp  multiple_send_widget.h  multiple_send_widget.ui  receive_area_box.cpp  receive_area_box.h  receive_area_box.ui  receive_settings_box.cpp  receive_settings_box.h  receive_settings_box.ui  send_area_box.cpp  send_area_box.h  send_area_box.ui  send_settings_box.cpp  send_settings_box.h  send_settings_box.ui  single_send_widget.cpp  single_send_widget.h  说明.txt
simple_ui/: ALineWidget.h  ALineWidget.ui  README.md  ReceiveAreaBox.ui  clientWidget.h  clientWidget.ui  clientesTitle.h  clientesTitle.ui  line_table.h  line_table.ui  network_settings_box.h  network_settings_box.ui  network_settings_widget.h  network_settings_widget.ui  notification_bubble.h  notification_bubble.ui  receive_settings_box.h  receive_settings_box.ui  send_area_box.ui  send_settings_box.h  send_settings_box.ui  single_send_widget.ui  tail_widget.h  tail_widget.ui  target_box.ui  tilte_widget.h  title_widget.ui  uic_network_settings_box.h  uic_receive_settings_box.h  uic_send_area_box.h  uic_target_box.h
sundry/: sundry.cpp  sundry.h  sundry_qt.cpp  sundry_qt.h
